sfdx-project/force-app/main/default/objects/Agent_Audit__c/Agent_Audit__c.object-meta.xml
<CustomObject>
    <description>One record per Agentforce invocation. Retained 24 months minimum. Hallucination flag set during weekly QA review.</description>
    <label>Agent Audit</label>
    <nameField>
        <displayFormat>AUD-{0000}</displayFormat>
        <label>Audit Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Audit Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>