sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Hallucination_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hallucination_Flag__c</fullName>
    <label>Hallucination Flag</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>