sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Hallucination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hallucination_Notes__c</fullName>
    <label>Hallucination Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>