sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Input_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Input_Record_Ids__c</fullName>
    <label>Input Record IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>