sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Invocation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Invocation_Timestamp__c</fullName>
    <label>Invocation Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>