sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Invoked_By__c.field-meta.xml
<CustomField>
    <fullName>Invoked_By__c</fullName>
    <label>Invoked By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agent Audit Records</relationshipLabel>
    <relationshipName>Agent_Audit_Records</relationshipName>
    <type>Lookup</type>
</CustomField>