sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Output_Text__c.field-meta.xml
<CustomField>
    <fullName>Output_Text__c</fullName>
    <label>Output Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>