sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Prompt_Hash__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Hash__c</fullName>
    <label>Prompt Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>