sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Source_Ids_Cited__c.field-meta.xml
<CustomField>
    <fullName>Source_Ids_Cited__c</fullName>
    <label>Source IDs Cited</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>