sfdx-project/force-app/main/default/objects/Agent_Audit__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Signal Classifier</fullName><default>false</default><label>Signal Classifier</label></value>
            <value><fullName>BD Briefer</fullName><default>false</default><label>BD Briefer</label></value>
            <value><fullName>Scoring Explainer</fullName><default>false</default><label>Scoring Explainer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>